Fixed user-functions right align

--- a/app/assets/stylesheets/application.css.styl
+++ b/app/assets/stylesheets/application.css.styl
@@ -85,7 +85,7 @@ textarea {
   font-size: 13px;
   padding-top: 5px;
   position: absolute;
-  right: 0;
+  right: 20px;
   text-align: right;
   text-decoration: none;
   top: 0;
